--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 __pycache__/
 *.py[cod]
+.hydra/
 .mypy_cache/
 .pytest_cache/
 mlruns/
@@ -13,3 +14,6 @@ reports/
 artifacts/
 .coverage
 coverage.xml
+
+*.lock
+*.log
