--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,13 @@ include = "ekgclf"
 from = "src"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-torch = "^2.3.1"
-torchaudio = "^2.3.1"
+python = ">=3.11" 
 numpy = "^2.0.4"
 scipy = "^1.13.1"
 pandas = "^2.2.2"
 wfdb = "^4.1.2"
 scikit-learn = "^1.5.1"
-hydra-core = "^1.3.2"
+hydra-core = "1.3.2"
 pydantic = "^2.8.2"
 mlflow = "^2.15.1"
 fastapi = "^0.115.0"
@@ -29,6 +27,7 @@ tqdm = "^4.66.4"
 pyyaml = "^6.0.2"
 prometheus-client = "^0.20.0"
 python-dotenv = "^1.0.1"
+omegaconf = "2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
